# Magento-2-API

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
magento_api_tyler_gunn/: gui.py  magento.py
src/magento_2/: magento.py
src/magento_api_2/: gui.py  magento.py
tests/: test_magento.py
