[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "magento-api-2"
version = "0.0.3"
authors = [
  { name="Gunn1", email="tylerjgunn@proton.me" },
]
description = "A python module for interacting with the Magento 2 REST API. GUI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Gunn1/Magento-API/tree/main"
Issues = "https://github.com/Gunn1/Magento-API/issues"